tests/ui/moves/no-reuse-move-arc.stderr
error[E0382]: the type `Arc` does not implement `Copy`
  --> $DIR/no-reuse-move-arc.rs:13:18
   |
LL |     let arc_v = Arc::new(v);
   |         ----- this move could be avoided by cloning the original `Arc`, which is inexpensive
LL |
LL |     thread::spawn(move|| {
   |                   ------ value moved into closure here
LL |         assert_eq!((*arc_v)[3], 4);
   |                      ----- variable moved due to use in closure
...
LL |     assert_eq!((*arc_v)[2], 3);
   |                  ^^^^^ value borrowed here after move
   |
   = note: consider using `Arc::clone`
   = note: borrow occurs due to deref coercion to `Vec<i32>`
help: consider cloning the value before moving it into the closure
   |
LL ~     let value = arc_v.clone();
LL ~     thread::spawn(move|| {
LL ~         assert_eq!((*value)[3], 4);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
